[package]
name = "dagger-module"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dagger-module"
path = "src/main.rs"

[dependencies]
dagger-sdk = { path = "/sdk/dagger-sdk", features = ["module"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
derive_builder = "0.12"
