[project]
name = "main"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "asyncer",
    "dagger-io",
]

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
asyncer = { git = "https://github.com/tiangolo/asyncer", tag = "0.0.5" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
